RESOLVED FIXED 246142
REGRESSION(255206@main) [GLIB] WebKitTestRunner crash with g_tls_certificate_is_same: assertion 'G_IS_TLS_CERTIFICATE (cert_one)' failed
https://bugs.webkit.org/show_bug.cgi?id=246142
Summary REGRESSION(255206@main) [GLIB] WebKitTestRunner crash with g_tls_certificate_...
Lauro Moura
Reported 2022-10-06 02:39:46 PDT
From https://build.webkit.org/#/builders/40/builds/7383 00:12:23.395 3 [56/59048] accessibility/custom-elements/flowto-shadow.html failed unexpectedly (WebKitTestRunner crashed [pid=1667]) 00:12:23.395 3 worker/1 killing driver 00:12:23.395 3 worker/1 accessibility/custom-elements/flowto-shadow.html failed: 00:12:23.395 3 worker/1 WebKitTestRunner crashed [pid=1667] 00:12:23.396 3 worker/2 "flatpak-spawn --host coredumpctl" took 0.03s 00:12:23.401 3 worker/4 "flatpak-spawn --host coredumpctl" took 0.03s 00:12:23.401 3 worker/4 worker/4 crypto/workers/crypto-random-values-limits-worker.html crashed, (stderr lines): 00:12:23.401 3 worker/4 00:12:23.402 3 worker/4 (process:1673): GLib-GIO-CRITICAL **: 00:12:23.292: g_tls_certificate_is_same: assertion 'G_IS_TLS_CERTIFICATE (cert_one)' failed
Attachments
Lauro Moura
Comment 1 2022-10-06 02:41:31 PDT
Crash log from GTK bot at https://build.webkit.org/results/GTK-Linux-64-bit-Release-Tests/255207@main%20(9377)/accessibility/ARIA-reflection-crash-log.txt Thread 1 (Thread 0x7fcfa74a49c0 (LWP 169)): #0 g_logv (log_domain=0x7fcfa8be46e7 "GLib-GIO", log_level=G_LOG_LEVEL_CRITICAL, format=<optimized out>, args=<optimized out>) at ../glib/gmessages.c:1418 #1 0x00007fcfb3a5b933 in g_log (log_domain=log_domain@entry=0x7fcfa8be46e7 "GLib-GIO", log_level=log_level@entry=G_LOG_LEVEL_CRITICAL, format=format@entry=0x7fcfb3ab4c76 "%s: assertion '%s' failed") at ../glib/gmessages.c:1456 #2 0x00007fcfb3a5d51d in g_return_if_fail_warning (log_domain=log_domain@entry=0x7fcfa8be46e7 "GLib-GIO", pretty_function=pretty_function@entry=0x7fcfa8bfd530 <__func__.6.lto_priv.31> "g_tls_certificate_is_same", expression=expression@entry=0x7fcfa8bfca00 "G_IS_TLS_CERTIFICATE (cert_one)") at ../glib/gmessages.c:2942 #3 0x00007fcfa8b44a42 in g_tls_certificate_is_same (cert_one=<optimized out>, cert_two=<optimized out>) at ../gio/gtlscertificate.c:1180 #4 0x00007fcfb0875ee8 in WebKit::PageLoadState::commitChanges() [clone .part.0] () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0 #5 0x00007fcfb08764be in WebKit::PageLoadState::Transaction::~Transaction() () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0 #6 0x00007fcfb0904e75 in WebKit::WebPageProxy::loadRequestWithNavigationShared(WTF::Ref<WebKit::WebProcessProxy, WTF::RawPtrTraits<WebKit::WebProcessProxy> >&&, WTF::ObjectIdentifier<WebCore::PageIdentifierType>, API::Navigation&, WebCore::ResourceRequest&&, WebCore::ShouldOpenExternalURLsPolicy, API::Object*, WebCore::ShouldTreatAsContinuingLoad, std::optional<WebKit::NavigatingToAppBoundDomain>, std::optional<WebKit::WebsitePoliciesData>&&, std::optional<WTF::ObjectIdentifier<WebKit::NetworkResourceLoadIdentifierType> >) () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0 #7 0x00007fcfb092ebed in WebKit::WebPageProxy::loadRequest(WebCore::ResourceRequest&&, WebCore::ShouldOpenExternalURLsPolicy, API::Object*) () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0 #8 0x00007fcfb09736a6 in WKPageLoadURL () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0 #9 0x0000559e071289b3 in WTR::TestController::resetStateToConsistentValues(WTR::TestOptions const&, WTR::TestController::ResetStage) () #10 0x0000559e07128ea2 in WTR::TestController::ensureViewSupportsOptionsForTest(WTR::TestInvocation const&) () #11 0x0000559e07129041 in WTR::TestController::configureViewForTest(WTR::TestInvocation const&) () #12 0x0000559e071369bb in WTR::TestInvocation::invoke() () #13 0x0000559e0711f3b7 in WTR::TestController::runTest(char const*) () #14 0x0000559e0711f671 in WTR::TestController::runTestingServerLoop() () #15 0x0000559e0711fc88 in WTR::TestController::TestController(int, char const**) () #16 0x0000559e07151685 in main ()
Carlos Garcia Campos
Comment 2 2022-10-06 02:59:57 PDT
EWS
Comment 3 2022-10-06 03:05:57 PDT
Committed 255213@main (6b44923e5f85): <https://commits.webkit.org/255213@main> Reviewed commits have been landed. Closing PR #5076 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.