REGRESSION(255206@main) [GLIB] WebKitTestRunner crash with g_tls_certificate_is_same: assertion 'G_IS_TLS_CERTIFICATE (cert_one)' failed https://bugs.webkit.org/show_bug.cgi?id=246142

Reviewed by Adrian Perez de Castro.

Handle the case of CertificateInfo being empty when comparing.

* Source/WebCore/platform/network/soup/CertificateInfo.h:
(WebCore::CertificateInfo::operator== const):

Canonical link: https://commits.webkit.org/255213@main